@@ -26,11 +26,11 @@ import java.util.WeakHashMap;
 import android.content.res.Resources;
 import android.graphics.Bitmap;
 import android.graphics.BitmapFactory;
-import android.graphics.drawable.BitmapDrawable;
 import android.graphics.drawable.Drawable;
 import android.widget.ImageView;
 
 import com.android.keepass.R;
+import com.keepassdroid.compat.BitmapDrawableCompat;
 import com.keepassdroid.database.PwIcon;
 import com.keepassdroid.database.PwIconCustom;
 import com.keepassdroid.database.PwIconStandard;
@@ -87,7 +87,7 @@ public class DrawableFactory {
 				return blank;
 			}
 			
-			draw = new BitmapDrawable(res, bitmap);
+			draw = BitmapDrawableCompat.getBitmapDrawable(res, bitmap);
 			customIconMap.put(icon.uuid, draw);
 		}
 		
