@@ -1,3 +1,5 @@
+  * Android 1.5 compatibility fixes
+
 KeePassDroid (1.8)
   * Layout updates
   * Custom icon support
